# r2

./: .gitignore  CMakeLists.txt
engine/: CMakeLists.txt
engine/include/: rlutilh.h
engine/include/OIS/: OISPrereqs.h
engine/include/v8pp/: class.hpp  class.ipp  ptr_traits.hpp
engine/lib/: v8pp.lib
engine/lib/debug/: Bullet3Collision_Debug.lib  Bullet3Common_Debug.lib  Bullet3Dynamics_Debug.lib  Bullet3Geometry_Debug.lib  BulletInverseDynamics_Debug.lib  LinearMath_Debug.lib  OIS_d.exp  OIS_d.lib  glfw3.lib  marl.lib  v8.lib  v8_libbase.lib
engine/lib/release/: Bullet3Collision.lib  Bullet3Common.lib  Bullet3Dynamics.lib  Bullet3Geometry.lib  BulletCollision.lib  BulletDynamics.lib  BulletInverseDynamics.lib  BulletInverseDynamicsUtils.lib  BulletSoftBody.lib  ConvexDecomposition.lib  LinearMath.lib  OIS.exp  OIS.lib  glfw3.lib  marl.lib  v8.lib  v8pp.lib
engine/r2/: config.h  engine.cpp  engine.h
engine/r2/bindings/: bindings.h  engine_bindings.cpp  event_bindings.cpp  graphics_bindings.cpp  graphics_bindings.h  imgui_bindings.cpp  io_bindings.cpp  math_bindings.cpp  math_converters.cpp  math_converters.h  math_defs.h  v8helpers.cpp  v8helpers.h  v8pp_custom.h
engine/r2/managers/: assetman.cpp  assetman.h  audioman.cpp  audioman.h  engine_state.cpp  engine_state.h  fileman.cpp  fileman.h  inputman.cpp  inputman.h  interpolationman.cpp  interpolationman.h  logman.cpp  logman.h  memman.cpp  memman.h  renderman.cpp  renderman.h  sceneman.cpp  sceneman.h  scriptman.cpp  scriptman.h  stateman.cpp  stateman.h
engine/r2/managers/drivers/gl/: driver.cpp  driver.h  shader.cpp
engine/r2/systems/: animation.cpp  animation.h  animation_sys.cpp  animation_sys.h  camera_sys.cpp  camera_sys.h  cascade_functions.cpp  cascade_functions.h  entity.cpp  entity.h  lighting_sys.cpp  lighting_sys.h  mesh_sys.cpp  mesh_sys.h  physics_sys.cpp  physics_sys.h  scripted_sys.cpp  scripted_sys.h  transform_sys.cpp  transform_sys.h
engine/r2/utilities/: average.cpp  average.h  buffer.cpp  buffer.h  debug_drawer.cpp  debug_drawer.h  dynamic_array.hpp  event.cpp  event.h  fly_camera.cpp  fly_camera.h  gl3w.c  imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h  indexbuffer.cpp  indexbuffer.h  instancebuffer.cpp  instancebuffer.h  interpolator.cpp  interpolator.hpp  mesh.cpp  mesh.h  periodic_update.cpp  periodic_update.h  robin_hood.cpp  robin_hood.h  texture.cpp  texture.h  timer.cpp  timer.h  uniformbuffer.cpp  uniformbuffer.h  utils.cpp  utils.h  vertexbuffer.cpp  vertexbuffer.h  window.cpp  window.h
engine/r2/utilities/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp  imstb_truetype.h
tests/: CMakeLists.txt  create_test.bat  default_main.cpp
tests/asset/: CMakeLists.txt  main.cpp
tests/camera/: CMakeLists.txt  main.cpp
tests/entity/: CMakeLists.txt  main.cpp
tests/event/: CMakeLists.txt  main.cpp
tests/interpolator/: CMakeLists.txt  desktop.ini  main.cpp
tests/mesh/: CMakeLists.txt  main.cpp
tests/mesh_component/: CMakeLists.txt  main.cpp
tests/physics/: CMakeLists.txt  main.cpp
tests/playground/: CMakeLists.txt  main.cpp
tests/scene_man/: CMakeLists.txt  main.cpp
tests/scripted_system/: CMakeLists.txt  main.cpp
tests/state/: CMakeLists.txt  main.cpp
tests/timer/: CMakeLists.txt  main.cpp
tests/uniforms/: CMakeLists.txt  main.cpp
tests/unscripted/: CMakeLists.txt  main.cpp  swarmz.h
