project(unit_tests)

add_subdirectory(build)
add_subdirectory(asset)
add_subdirectory(event)
add_subdirectory(state)
add_subdirectory(scene_man)
add_subdirectory(mesh)
add_subdirectory(interpolator)
add_subdirectory(timer)
add_subdirectory(uniforms)
add_subdirectory(camera)
add_subdirectory(entity)
